# zclaw

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  Containerfile  README.md  build.zig  build.zig.zon  compose.yml  install.sh  sdkconfig.defaults  sdkconfig.esp32s3-sense-voice.defaults  sdkconfig.esp32s3-voice.defaults  sdkconfig.qemu.defaults
.github/workflows/: firmware-stack-guard.yml  firmware-target-matrix.yml
docs-site/: README.html  README.md  app.js  architecture.html  build-your-own-tool.html  changelog.html  email-bridge.html  getting-started.html  index.html  local-dev.html  security.html  styles.css  tools.html  use-cases.html
docs-site/reference/: README_COMPLETE.md
main/: CMakeLists.txt  Kconfig.projbuild  agent.c  agent.h  agent_commands.c  agent_commands.h  boot_guard.c  boot_guard.h  bridge_client.c  bridge_client.h  builtin_tools.def  channel.c  channel.h  config.h  cron.c  cron.h  email_bridge.c  email_bridge.h  form_urlencoded.c  form_urlencoded.h  json_util.c  json_util.h  llm.c  llm.h  main.c  memory.c  memory.h  memory_keys.c  messages.h  nvs_keys.h  ota.c  ota.h  ratelimit.c  ratelimit.h  telegram.c  telegram.h  telegram_poll_policy.c  telegram_poll_policy.h  tools.c  tools.h  (+13 more)
main/web/: setup.html  success.html
scripts/: benchmark_latency.py  build.sh  emulate.sh  erase.sh  flash-secure.sh  flash.sh  monitor.sh  provision-dev.sh  provision.sh  qemu_live_llm_bridge.py  test-api.sh  test.sh  web-preview.sh  web-relay.sh  web_preview_server.py  web_relay.py
src/: agent.zig  channel.zig  config.zig  cron.zig  json_util.zig  llm.zig  main.zig  memory.zig  ratelimit.zig  telegram.zig  tools.zig  tools_cron.zig  tools_memory.zig  tools_persona.zig  tools_system.zig  tools_user.zig
test/api/: provider_harness.py  test_anthropic.py  test_azure_openai.py  test_tool_creation.py
(+39 files in other folders)
