idf_component_register(
    SRCS
        "main.c"
        "agent.c"
        "channel.c"
        "llm.c"
        "tools.c"
        "tools_common.c"
        "tools_gpio.c"
        "tools_i2c.c"
        "tools_memory.c"
        "tools_cron.c"
        "tools_system.c"
        "memory.c"
        "json_util.c"
        "telegram.c"
        "cron.c"
        "memory_keys.c"
        "telegram_update.c"
        "text_buffer.c"
        "security.c"
        "cron_utils.c"
        "ratelimit.c"
        "ota.c"
        "boot_guard.c"
        "user_tools.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_http_client
        esp_netif
        esp-tls
        esp_timer
        json
        driver
        lwip
        esp_driver_usb_serial_jtag
        app_update
)
